syntax = "proto3";

package pb;

import "common.proto";

service Node {
  rpc SubmitTx(SubmitTxRequest) returns (SubmitTxResponse) {}
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse) {}
  rpc GetSnapshot(GetSnapshotRequest) returns (GetSnapshotResponse) {}
	rpc GetSnapshotInfo(Empty) returns (GetSnapshotInfoResponse) {}
  rpc GetBlockHeight(Empty) returns (GetBlockHeightResponse) {}
}

service Signer {
  rpc SignBlock(SignBlockRequest) returns (SignBlockResponse) {}
}

message SubmitTxRequest {
  bytes transaction = 1;
}

message SubmitTxResponse {
  bool ok = 1;
  Error error = 9;
}

message GetBlockRequest {
  uint64 height = 1;
}

message GetBlockResponse {
  bytes block = 1;
  Error error = 9;
}

message GetSnapshotRequest {
  uint64 height = 1;
}

message GetSnapshotResponse {
  bytes data = 1;
  Error error = 9;
}

message GetSnapshotInfoResponse {
	uint64 height = 1;
	uint64 size = 2;
	bytes blockchain_id = 3;
	Error error = 9;
}

message GetBlockHeightResponse {
  uint64 height = 1;
  Error error = 9;
}

message SignBlockRequest {
  bytes block = 1;
}

message SignBlockResponse {
  bytes signature = 1;
  Error error = 9;
}
